--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,10 @@ p {
   margin-left: 1em;
 }
 
+.fortniteStore .card {
+  background: transparent;
+}
+
 .main-content {
   background-color: #b3b3b3;
 }
