--- a/src/css/partials/_main-styles.scss
+++ b/src/css/partials/_main-styles.scss
@@ -14,6 +14,15 @@ p {
     }
 }
 
+.fortniteStore {
+    .card {
+    background: transparent;
+    }
+}
+
 .main-content {
     background-color: rgb(179, 179, 179);
+}
+
+h3 {
 }
