--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,4 +21,53 @@ p {
 .main-content {
   background-color: #b3b3b3;
 }
+
+.player-stats {
+  position: relative;
+  margin: 2em 0;
+  padding: .3em 0;
+  color: white;
+  background-color: #142554;
+  font-size: 2em;
+}
+
+.big {
+  display: block;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.row .main-stats {
+  background: radial-gradient(#384e8d, #142554 50%);
+  border-right: 3px solid rgba(180, 180, 180, 0.5);
+}
+
+.row .main-stats-last {
+  border-right: none;
+}
+
+.bg-stats {
+  background: #142554;
+  padding: .5em;
+}
+
+.stats-small {
+  margin-bottom: .3em;
+  background: #49608C;
+}
+
+.close-button {
+  font-size: 0.8em;
+  text-decoration: none;
+  color: red;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  right: .5em;
+}
+
+.close-button:hover {
+  text-decoration: none;
+  color: red;
+}
 /*# sourceMappingURL=main.css.map */
