--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,4 @@
 // Partials ------------------------------------ /
 @import 'partials/variables',
-        'partials/main-styles';
+        'partials/main-styles',
+        'partials/stats';
